--- a/src/All-CSS/Contact.css
+++ b/src/All-CSS/Contact.css
@@ -181,6 +181,7 @@ input[type="date"]::-webkit-calendar-picker-indicator{
     }
     .formMain{
        flex-direction: column-reverse;
+       padding: 0px 10px;
     }
     .form ,.form-name , .form-email, .form-message, .react-phone-input-2 .react-tel-input ,.form-date{
         width: 100%;
@@ -188,7 +189,6 @@ input[type="date"]::-webkit-calendar-picker-indicator{
     .formImage img{ 
         width: 40vh;
         padding: 30px 0px;
-        border: 2px solid red;
     }
 
 }
