--- a/src/All-CSS/Contact.css
+++ b/src/All-CSS/Contact.css
@@ -9,7 +9,7 @@
 .contactBanner{
     max-width: 100vw;
     height: 80vh;
-    background: url(https://www.tenfourmagazine.com/content/wp-content/gallery/nov2017cover/NovCvrStory03.jpg);
+    background: url(../assets/image.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -141,6 +141,7 @@ input[type="date"]::-webkit-calendar-picker-indicator{
 .buttonForm button:hover{
     background-color: white;
     color: black;
+    border:  1px solid white;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }  
