--- a/src/All-CSS/Services.css
+++ b/src/All-CSS/Services.css
@@ -9,7 +9,7 @@
 .serviceBanner{
     max-width: 100vw;
     height: 80vh;
-    background: url(https://www.tenfourmagazine.com/content/wp-content/gallery/nov2017cover/NovCvrStory03.jpg);
+    background: url(../assets/image.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,6 +99,7 @@
 .buttonService button:hover{
     background-color: black;
     color: white;
+    border: 1px solid white;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }  
