--- a/src/All-CSS/Trucks.css
+++ b/src/All-CSS/Trucks.css
@@ -9,7 +9,7 @@
 .dryBanner{
     max-width: 100vw;
     height: 80vh;
-    background: url(https://www.tenfourmagazine.com/content/wp-content/gallery/nov2017cover/NovCvrStory03.jpg);
+    background: url(../assets/image.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
