--- a/src/All-CSS/Contact.css
+++ b/src/All-CSS/Contact.css
@@ -2,9 +2,22 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     cursor: none;
+}
+.cursor{
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    mix-blend-mode: difference;
+    pointer-events: none;
+    z-index: 10000;
 }
 .contactBanner{
     max-width: 100vw;
@@ -13,11 +26,20 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    object-fit: cover;
-    border-image: fill 0 linear-gradient(#0003, #000000a4);
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-border-image: fill 0 -o-linear-gradient(#0003, #000000a4);
+       border-image: fill 0 -webkit-gradient(linear, left top, left bottom, from(#0003), to(#000000a4));
+       border-image: fill 0 linear-gradient(#0003, #000000a4);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .contactBanner h1{
     font-size: 3vh;
@@ -41,22 +63,37 @@
     margin-top: 80px;
 }
 .IconsMain{
+     display: -webkit-box;
+     display: -ms-flexbox;
      display: flex;
-     align-items: center;
-     justify-content: space-around;
+     -webkit-box-align: center;
+         -ms-flex-align: center;
+             align-items: center;
+     -ms-flex-pack: distribute;
+         justify-content: space-around;
 }
 .phone, .address, .email{
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     width: 30%;
     height:20rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     /* justify-content: center; */
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 8px;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .phone:hover , .address:hover, .email:hover{
     scale: 1.05;
+    -webkit-transition: .3s all linear;
+    -o-transition: .3s all linear;
     transition: .3s all linear;
 }
 .phone i, .address i, .email i{ 
@@ -86,9 +123,15 @@
 .formMain{
     margin-top: 80px;
     max-width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     padding: 40px 40px;
 }
 form h1{
@@ -99,11 +142,19 @@ form h1{
     color: #5254ff;
 }
 .form{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    align-items: center;
-    justify-content: center;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     width: 40%;
     border-radius: 8px;
     padding: 40px 40px;
@@ -119,7 +170,8 @@ form h1{
 
 }
 input[type="date"]::-webkit-calendar-picker-indicator{
-    filter: invert(1);
+    -webkit-filter: invert(1);
+            filter: invert(1);
 }
 .form-name,.form-email, .form-message, .form-date{
     padding: 20px 0px;
@@ -142,13 +194,21 @@ input[type="date"]::-webkit-calendar-picker-indicator{
     background-color: white;
     color: black;
     border:  1px solid white;
+    -webkit-transition: .5s all ease-in-out;
+    -o-transition: .5s all ease-in-out;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }  
 .formImage{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 40vw;
 }
 .formImage img{ 
@@ -166,7 +226,10 @@ input[type="date"]::-webkit-calendar-picker-indicator{
         margin: 0px 20px;
     }
     .IconsMain{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .phone, .address, .email{
         width: 90%;
@@ -181,7 +244,10 @@ input[type="date"]::-webkit-calendar-picker-indicator{
         font-size: 14px;
     }
     .formMain{
-       flex-direction: column-reverse;
+       -webkit-box-orient: vertical;
+       -webkit-box-direction: reverse;
+           -ms-flex-direction: column-reverse;
+               flex-direction: column-reverse;
        padding: 0px 10px;
     }
     .form ,.form-name , .form-email, .form-message, .react-phone-input-2 .react-tel-input ,.form-date{
