--- a/src/All-CSS/Footer.css
+++ b/src/All-CSS/Footer.css
@@ -1,20 +1,26 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     
 }
 footer{
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
     margin-top: 110px;
     max-width: 100vw;
     background-color: #5254ff;
     color: white;
 }
 .FooterItems{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .FooterApp-logo{
     height: 25vh;
@@ -39,10 +45,13 @@ footer{
     text-align: left;
 }
 .footer-option ul, .footer-work ul{
+    display: -ms-grid;
     display: grid;
     grid-gap: 25px;
     list-style: none;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 1.5vh;
     text-align: left;
     margin: 40px 0px;
@@ -54,21 +63,37 @@ footer{
     padding: 0.7rem 1rem;
     white-space: nowrap;
 }
-
+.cursor{
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    mix-blend-mode: difference;
+    pointer-events: none;
+    z-index: 10000;
+}
 .footer-links i, .footer-links-contact i{
     padding-right: 10px;
 }
 .footer-links:hover , .footer-linkstwo:hover{
     background-color: black;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     border-radius: 4px;
     color: white !important;
 }
 .footer-contact ul{
+    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
     list-style: none;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: left;
     font-size: 1.5vh;
     margin: 40px 0px;
@@ -78,7 +103,9 @@ footer{
     text-decoration: none;
 }
 .footer-socials ul{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     padding: 0px;
@@ -93,6 +120,8 @@ footer{
 }
 .footer-socials li:hover{
     color: #222;
+    -webkit-transition: .5s all linear;
+    -o-transition: .5s all linear;
     transition: .5s all linear;
 }
 .footer-socials h1{
@@ -113,6 +142,7 @@ footer{
 
 @media screen and (max-width: 850px) {
   .FooterItems{
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
   .FooterApp-logo{
