--- a/src/All-CSS/Home.css
+++ b/src/All-CSS/Home.css
@@ -2,28 +2,37 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     cursor: none;
 }
 .seperation{
     height: 7px;
-    background-color: rgb(231, 231, 231);
+    background-color: rgba(207, 207, 207, 0.356);
+    /* background-color: #ebebeb; */
     margin: 8px auto;
     position: relative;
     z-index: 20;
 }
 .bannerSection {
     background: url(../assets/image.webp);
-    border-image: fill 0 linear-gradient(#0003, #000000a4);
+    -o-border-image: fill 0 -o-linear-gradient(#0003, #000000a4);
+       border-image: fill 0 -webkit-gradient(linear, left top, left bottom, from(#0003), to(#000000a4));
+       border-image: fill 0 linear-gradient(#0003, #000000a4);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 100vw;
     height: 80vh;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .BannerConent >:nth-child(1){
     font-size: 4vh;
@@ -53,17 +62,28 @@
 .BannerConent button:hover{
     background-color: black;
     color: white;
+    -webkit-transition: .5s all ease-in-out;
+    -o-transition: .5s all ease-in-out;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }  
 
 .greetings{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     max-width: 100vw;
     margin-top: 80px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .greetingHeading span, .MainSection span, .TruckMain span, .workHeaading span, .priceMainHeading span, .driveeMainHeading span{
     color: #5254ff;
@@ -95,10 +115,16 @@ font-size: 4vh;
 }
 
 .MainContent{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     max-width: 100vw;
     padding-top: 50px;
 }
@@ -110,7 +136,9 @@ font-size: 4vh;
     font-size: 50px;
     position: relative;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
     /* margin-left: 4.2rem; */
 }
 .MainRoket >:nth-child(2), .MainPhone >:nth-child(2), .MainLock >:nth-child(2), .MainWallet >:nth-child(2){
@@ -130,14 +158,18 @@ font-size: 4vh;
     font-size: 50px;
     position: relative;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
 }
 .MainWallet >:nth-child(1){
     color: #5254ff;
     font-size: 50px;
     position: relative;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
 }
 .TruckMain{
     max-width: 100vw;
@@ -150,10 +182,16 @@ font-size: 4vh;
 }
 
 .dryVan{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     max-width: 100vw;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 40px 20px;
 }
 .dryVan img{
@@ -161,10 +199,19 @@ font-size: 4vh;
     height: 70vh;
 }
 .dryContent{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .dryContent h6{
     font-size: 3vh;
@@ -191,6 +238,8 @@ font-size: 4vh;
     background-color: black;
     color: white;
     border: 1px solid white;
+    -webkit-transition: .5s all ease-in-out;
+    -o-transition: .5s all ease-in-out;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }
@@ -216,14 +265,22 @@ font-size: 4vh;
     padding: 20px 40px;
 }
 .priceCards, .driveCards{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding-top: 40px;
 }
 .priceCardone ,.priceCardtwo, .priceCardthree{
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     width: 25rem;
     height: 450px;
     border-radius: 8px;
@@ -234,12 +291,16 @@ span i{
     color: #5254ff;
     position: relative;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
     padding: 20px 0px;
     font-size: 5vh;
 }
 .priceCardone:hover ,.priceCardtwo:hover, .priceCardthree:hover{
     scale: 1.05;
+    -webkit-transition: .3s all linear;
+    -o-transition: .3s all linear;
     transition: .3s all linear;
 }
 .priceCardone h2,.priceCardthree h2{
@@ -266,7 +327,8 @@ span i{
     border-bottom: 2px solid #5254ff;
 }
 .driveCardone, .driveCardtwo, .driveCardthree, .driveCardfour{
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     width: 20rem;
     height: 350px;
     border-radius: 8px;
@@ -275,6 +337,8 @@ span i{
 }
 .driveCardone:hover, .driveCardtwo:hover, .driveCardthree:hover, .driveCardfour:hover{
     scale: 1.05;
+    -webkit-transition: .3s all linear;
+    -o-transition: .3s all linear;
     transition: .3s all linear;
 }
 .driveCardone h1, .driveCardtwo h1, .driveCardthree h1, .driveCardfour h1{
@@ -327,8 +391,11 @@ span i{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    object-fit: cover;
-    border-image: fill 0 linear-gradient(#0003, #000000a4);
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-border-image: fill 0 -o-linear-gradient(#0003, #000000a4);
+       border-image: fill 0 -webkit-gradient(linear, left top, left bottom, from(#0003), to(#000000a4));
+       border-image: fill 0 linear-gradient(#0003, #000000a4);
     background-attachment: fixed;
 }
   .testimonials{
@@ -337,7 +404,8 @@ span i{
     height: 60vh;
     color: white;
     background-color: rgba(255, 255, 255, 0.247);
-    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
     
   }
   .testimonials h1{
@@ -346,14 +414,24 @@ span i{
     color: #5254ff;
   }
   .userOne{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .userOne img{
     border-radius: 50%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
    
   }
   .userOne h5{
@@ -369,10 +447,16 @@ span i{
     padding: 10px 0px;
   }
   .userOne span{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .userOne span i{
     color: orange;
@@ -388,9 +472,15 @@ span i{
     text-align: center;
     font-size: 18px;
     /* background: #fff; */
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }  
   .autoplay-progress {
     position: absolute;
@@ -399,9 +489,15 @@ span i{
     z-index: 10;
     width: 48px;
     height: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-weight: bold;
     color: var(--swiper-theme-color);
   }
@@ -419,11 +515,14 @@ span i{
     fill: none;
     stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
     stroke-dasharray: 125.6;
-    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+            transform: rotate(-90deg);
   }
 @media screen and (max-width: 850px) {
     .bannerSection{
-        object-position: center;
+        -o-object-position: center;
+           object-position: center;
     }
     .BannerConent >:nth-child(1){
     font-size: 3vh;
@@ -439,7 +538,10 @@ span i{
     width: 12vh;
     }
     .greetings{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         max-width: 100vw;
     }
     .greetingHeading >:nth-child(1){
@@ -452,10 +554,19 @@ span i{
         padding: 20px 20px;
     }
     .MainContent{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .MainPhone,.MainWallet,.MainLock{
         padding: 30px 0px;
@@ -467,19 +578,35 @@ span i{
         text-wrap: wrap;
     }
     .dryVan{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .dryVan img{
         width: 50vh;
         height: 50vh;
     }
     .dryContent{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .priceCardone button, .priceCardtwo button, .priceCardthree button{
         margin-top: 30px;
