--- a/src/All-CSS/Navbar.css
+++ b/src/All-CSS/Navbar.css
@@ -3,26 +3,47 @@
     font-family: 'Poppins', sans-serif;
 }
 .NavbarItems{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 1rem;
     padding: 0 30px;
     background-color: #ffffff;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
     width: 95vw;
     height: 9vh;
     border-radius: 13px;
     position: fixed;
     top: 50px;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
     z-index: 1000;
 }
-
+.cursor{
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    mix-blend-mode: difference;
+    pointer-events: none;
+    z-index: 10000;
+}
 .logo{
     color: white;
-    justify-self: start;
+    -ms-grid-column-align: start;
+        justify-self: start;
     cursor: pointer;
 }
 
@@ -32,12 +53,18 @@
 }
 
 .nav-menu{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto 10px auto 10px auto 10px auto 10px auto 10px auto;
     grid-template-columns: repeat(6, auto);
     grid-gap: 10px;
     list-style: none;
-    align-items: center;
-    justify-content: end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
     text-align: center;
     margin: 20px 0px;
 }
@@ -55,6 +82,8 @@
 
 .nav-links:hover{
     background-color: rgb(80, 80, 238);
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     border-radius: 4px;
     color: white;
@@ -103,22 +132,35 @@
         /* margin-top: 20px; */
     }
     .nav-menu{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         background-color: rgba(255, 255, 255, .25);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .37);
-        backdrop-filter: blur(4px);
+        -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .37);
+                box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .37);
+        -webkit-backdrop-filter: blur(4px);
+                backdrop-filter: blur(4px);
         border-radius: 13px;
         width: 100%;
         height: auto;
         position: absolute;
         top: 0;
         left: -110%;
-        align-items: stretch;
+        -webkit-box-align: stretch;
+            -ms-flex-align: stretch;
+                align-items: stretch;
         padding: 80px 0 30px 0;
         margin: 0;
         z-index: -1;
+        -webkit-transition: all .3s ease-in-out;
+        -o-transition: all .3s ease-in-out;
         transition: all .3s ease-in-out;
     }
     .App-logo{
@@ -136,7 +178,8 @@
     }
     .nav-links:hover{
         background-color: rgba(66, 66, 66, 0.25);
-        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+                backdrop-filter: blur(4px);
         color: #222;
     }
     .menu-icons{
