--- a/src/All-CSS/Trucks.css
+++ b/src/All-CSS/Trucks.css
@@ -2,9 +2,22 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     cursor: none;
+}
+.cursor{
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    mix-blend-mode: difference;
+    pointer-events: none;
+    z-index: 10000;
 }
 .dryBanner{
     max-width: 100vw;
@@ -13,11 +26,20 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    object-fit: cover;
-    border-image: fill 0 linear-gradient(#0003, #000000a4);
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-border-image: fill 0 -o-linear-gradient(#0003, #000000a4);
+       border-image: fill 0 -webkit-gradient(linear, left top, left bottom, from(#0003), to(#000000a4));
+       border-image: fill 0 linear-gradient(#0003, #000000a4);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .dryBanner h1{
     font-size: 3vh;
@@ -39,10 +61,16 @@
 
 .Maindry{
     max-width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 80px;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .dryContent{
     width: 40vw;
@@ -62,9 +90,15 @@
     padding: 10px 40px 0px 0px;
 }
 .buttonContact{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
 }
 .buttonContact button{
     font-size: 12px;
@@ -81,6 +115,8 @@
 .buttonContact button:hover{
     background-color: black;
     color: white;
+    -webkit-transition: .5s all ease-in-out;
+    -o-transition: .5s all ease-in-out;
     transition: .5s all ease-in-out;
     font-weight: 600px;
 }  
@@ -100,7 +136,10 @@
         margin: 0px 20px;
     }
     .Maindry{
-        flex-direction: column-reverse;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: column-reverse;
+                flex-direction: column-reverse;
         padding: 0px 10px;
     }
     .dryContent{
